# gpufft

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  NOTICE  README.md
.github/workflows/: ci.yml
gpufft/: Cargo.toml  README.md  build.rs
gpufft-cuda-sys/: .clangd  Cargo.toml  README.md  build.rs  wrapper.h
gpufft-cuda-sys/src/: lib.rs
gpufft-vulkan-sys/: .clangd  Cargo.toml  README.md  build.rs  vkfft_shim.c  wrapper.h
gpufft-vulkan-sys/src/: lib.rs
gpufft/benches/: r2c_c2r.rs
gpufft/shaders/: stride_copy.comp
gpufft/src/: backend.rs  cuda.rs  error.rs  lib.rs  plan.rs  scalar.rs
gpufft/src/cuda/: buffer.rs  device.rs  error.rs  mod.rs  plan.rs
gpufft/src/vulkan/: buffer.rs  device.rs  error.rs  handles.rs  kernels.rs  mod.rs  plan.rs
gpufft/tests/: cuda_roundtrip.rs  fft_roundtrip.rs  smoke.rs  vulkan_r2c_c2r.rs
investigations/vkfft_multidim_r2c/: .clangd  .gitignore  Makefile  README.md  repro.cpp
